--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,91 @@
 body{
-    margin: 10px;
-    background-image: url( '../img/back_space_two.jpg');
+    align-content: center;
+    margin-left: 450px;
+    max-width: 50%;
+    background-image: url( '../img/back_space_1280.gif');
+    /*opacity: 0.8;*/
 }
-/*
+
+
 .container{
-    width: 800px;
+    text-align: center;
+    align-content: center;
+  /*  width: 50em;*/
+    /*background-image: url( '../img/back_space.gif');*/
+   /* opacity: 0.8;
     margin: 0 auto;
+    max-width: 100%;
+    height: auto;*/
+    /*background-color:#CCC;*/
+    width:700 px;
+    margin: 0 auto;
+    height: 600 px;
+    /*width: 800px;*/ 
+    border: #000 1px solid ;
+    /*height:6.25em;*/
+}
+#my_canvas{
+    background: #000;
+    border: #000 1px solid ;
 }
 .barra{
-    background-color:#CCC;
+    /*text-align: right;*/
+   /* margin-left: 10px;*/
+    background-color:#000;
+    color: white;
     font-size: 20 px;
+    /*height: 100 px;
+    width: 100 px;
+    padding: 10 px;*/
+    /*margin: 9px 0;*/
+    /*box-sizing: border-box;*/
+}
 
-}
+/*
 .div{
-    border-radius: 5px;
-}
+    border-radius: 0.313em;
+    bottom: 10px;
+}*/
+/*
 .contenedor{
-    background-color:#CCC;
+    /*background-color:#CCC;
     width:100%;
-    height:100px;
-}
+    height:6.25em;
+}*/
+/*
 .div_left{
-    height:80px;
+    height:5em;
     width:20%;
     float:left;
-    margin: 10px;
+    margin: 0.625em;
 }
 .div_right{
-    height:80px;
+    height:5em;
     width:20%;
     float:right;
-    margin: 10px;
+    margin: 0.625em;
+}*/
+.div_left{
+    color: red;
+    font-size: 40px;
+    background-color: #000;
+    cursor: pointer;
+    border-radius: 8px;
+    border: 2px solid blue;
 }
-*/
+.div_right{
+    color: red;
+    font-size: 40px;
+    background-color: #000;
+    cursor: pointer;
+    border-radius: 8px;
+    border: 2px solid blue;
+}
+.div_left:hover{
+    background-color: #fff;
+    color: black;
+}
+.div_right:hover{
+    background-color: #fff;
+    color: black;
+}
